service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mon-api-service
spec:
  selector:
    appName: mon-api
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
