ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mon-api-ingress
spec:
  rules:
  - host: anthony
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mon-api-service
            port:
              number: 8080
